tests/baselines/reference/protectedClassPropertyAccessibleWithinSubclass3(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
protectedClassPropertyAccessibleWithinSubclass3.ts(11,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== protectedClassPropertyAccessibleWithinSubclass3.ts (1 errors) ====
    class Base {
        protected x: string;
        method() {
            this.x;            // OK, accessed within their declaring class
        }
    }
    
    class Derived extends Base {
        method1() {
            this.x;            // OK, accessed within a subclass of the declaring class
            super.x;           // Error, x is not public
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
    }